deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trigger
spec:
  selector:
    matchLabels:
      name: trigger
  template:
    metadata:
      labels:
        name: trigger
    spec:
      containers:
        - name: trigger
          image: mireg.wr25.org/trigger:latest
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
        name: trigger-service
spec:
        ports:
                - port: 8080
                  targetPort: 8080
                  protocol: TCP
        selector:
                name: trigger
